--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/bd_dscatalog
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=1234567
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
